--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.15.3",
     "lodash": "^4.17.4",
     "morgan": "^1.8.2",
+    "photoswipe": "^4.1.2",
     "print.js": "^1.0.18",
     "react": "^15.5.4",
     "react-codemirror": "^1.0.0",
