--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs": "^2.5.6",
     "express": "^4.15.3",
     "lodash": "^4.17.4",
+    "moment": "^2.19.2",
     "morgan": "^1.8.2",
     "photoswipe": "^4.1.2",
     "print.js": "^1.0.18",
